Fix Navbar sitewide *Make menu items horizontal from hamburger * Centre brand and hamburger together *Make menu items right aligned when on ipad view

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -58,6 +58,11 @@ p {
   color: #dc9806 !important;
 }
 
+.navbar-toggler {
+  margin-top: 2em;
+}
+
+
 /* Footer */
 
 /* To make sticky footer */
@@ -198,11 +203,13 @@ p {
   .sub-header {
     font-size: 1em;
   }
+}
 
-  .navbar-toggler {
-    margin-top: 2em;
-  }
-
+@media (min-width: 768px) and (max-width: 1024px) {
+  
+  .menu {
+  margin-left: 30%;
+}
 }
 
 @media (min-width: 2500px) {
@@ -221,7 +228,6 @@ p {
   li {
     font-size: 2em;
   }
-  
 }
 
   
